--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
+    "emailjs-com": "^2.6.4",
+    "google-map-react": "^2.1.9",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
